# cmp9140-research-project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  pyproject.toml
app/data/: analyze.py  data.py  downsample.py  partition.py  preprocess.py  result.py  statistic.py
app/fed/: __init__.py  client_app.py  server_app.py  task.py
app/model/: evaluate.py  loss.py  model.py  train.py
app/utils/: model.py  pandas.py  print.py
data/: Anomalous.parquet.zst
data_0/: Anomalous.parquet.zst  Benign.parquet.zst
data_1/: Anomalous.parquet.zst  Benign.parquet.zst
model/: 10_iid_ae_history.npy  10_iid_ae_model.pth  central_adam_ae_history.npy  central_adam_ae_model.pth  central_ae_50_eval.npy  central_ae_50_history.npy  central_ae_50_params.pth  central_ae_history.npy  central_ae_model.pth  centralized_ae_history.npy  centralized_ae_model.pth  ddos_ae_history.npy  ddos_ae_params.pth  fedadagrad_0001_dirichlet_03_50_ae_history.npy  fedadagrad_0001_dirichlet_03_50_ae_model.pth  fedadagrad_001_dirichlet_03_50_ae_model.pth  fedadagrad_dirichlet_03_50_ae_history.npy  fedadagrad_dirichlet_03_50_ae_model.pth  fedadagrad_iid_20_ae_history.npy  fedadagrad_iid_20_ae_model.pth  fedadam_0001_dirichlet_03_50_ae_model.pth  fedadam_dirichlet_03_10_ae_history.npy  fedadam_dirichlet_03_20_ae_history.npy  fedadam_dirichlet_06_10_ae_model.pth  fedadam_fedprox_dirichlet_03_20_ae_model.pth  fedadam_fedprox_dirichlet_06_10_ae_history.npy  fedadam_fedprox_dirichlet_06_20_ae_model.pth  fedadam_fedprox_iid_10_ae_history.npy  fedadam_fedprox_iid_20_ae_history.npy  fedadam_fedprox_iid_50_ae_history.npy  fedadam_fedprox_iid_50_ae_model.pth  fedadam_iid_10_ae_history.npy  fedadam_iid_10_ae_model.pth  fedadam_iid_20_ae_history.npy  fedadam_iid_20_ae_model.pth  fedavg_10_iid_ae_history.npy  fedavg_10_iid_ae_model.pth  fedavg_20_iid_ae_history.npy  fedavg_20_iid_ae_model.pth  fedavg_50_iid_ae_history.npy  (+65 more)
model_0/: central_ae_model.pth  fedadagrad_001_dirichlet_03_50_ae_history.npy  fedadagrad_01_dirichlet_03_50_ae_model.pth  fedadam_0001_dirichlet_03_50_ae_history.npy  fedadam_001_dirichlet_03_50_ae_history.npy  fedadam_001_dirichlet_03_50_ae_model.pth  fedadam_01_dirichlet_03_50_ae_history.npy  fedadam_01_dirichlet_03_50_ae_model.pth  fedadam_dirichlet_03_10_ae_model.pth  fedadam_dirichlet_03_20_ae_model.pth  fedadam_dirichlet_06_10_ae_history.npy  fedadam_dirichlet_06_20_ae_history.npy  fedadam_dirichlet_06_20_ae_model.pth  fedadam_dirichlet_06_50_ae_history.npy  fedadam_dirichlet_06_50_ae_model.pth  fedadam_fedprox_dirichlet_03_10_ae_history.npy  fedadam_fedprox_dirichlet_03_10_ae_model.pth  fedadam_fedprox_dirichlet_03_20_ae_history.npy  fedadam_fedprox_dirichlet_03_50_ae_history.npy  fedadam_fedprox_dirichlet_03_50_ae_model.pth  fedadam_fedprox_dirichlet_06_10_ae_model.pth  fedadam_fedprox_dirichlet_06_20_ae_history.npy  fedadam_fedprox_dirichlet_06_50_ae_history.npy  fedadam_fedprox_dirichlet_06_50_ae_model.pth  fedadam_fedprox_iid_10_ae_model.pth  fedadam_fedprox_iid_20_ae_model.pth  fedadam_iid_50_ae_history.npy  fedadam_iid_50_ae_model.pth  (+21 more)
(+72 files in other folders)
