[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Chuc Van Vu"

[tool.flwr.app.components]
serverapp = "fed.server_app:app"
clientapp = "fed.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
