[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "contourpy==1.3.2",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "datasets==3.1.0",
    "dill==0.3.8",
    "filelock==3.18.0",
    "flwr==1.19.0",
    "flwr-datasets==0.5.0",
    "fonttools==4.58.5",
    "frozenlist==1.7.0",
    "fsspec==2024.9.0",
    "grpcio==1.73.1",
    "hf-xet==1.1.5",
    "huggingface-hub==0.33.2",
    "idna==3.10",
    "iterators==0.0.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==4.25.8",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "ray==2.31.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich==13.9.4",
    "rpds-py==0.26.0",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomli==2.2.1",
    "tomli_w==1.2.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "typer==0.12.5",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Chuc Van Vu"

[tool.flwr.app.components]
serverapp = "fed.server_app:app"
clientapp = "fed.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
